--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 <!-- Footer -->
 <footer>
     © 2024 Yuvarathnaa Coaching Center, Chimmad. All rights reserved.<br>
-    Developed by <a href="https://miniprojectbytes.blogspot.com/">MiniProjectsBytes</a> | Created by <a href="https://praveenhallur123.github.io/Praveen-Portfolio-/" target="_blank">Praveen Hallur</a>
+    Developed by <a href="https://miniprojectbytes.blogspot.com/">MiniProjectsBytes</a> | Created by <a href="https://praveenhallur123.github.io/PraveenHallur123-Praveen---personal-portfolio/" target="_blank">Praveen Hallur</a>
 </footer>
 
 <!-- Google Translate Script -->
